--- a/resources/views/components/_logo.antlers.html
+++ b/resources/views/components/_logo.antlers.html
@@ -8,6 +8,7 @@
     aria-label="Logo {{ config:app:name }}"
     href="{{ site:url }}"
 >
-    <img src="/visuals/OITT24_LOGO-22x.png" class="select-none w-24 {{ class }}" width="{{ width }}" alt="{{ config:app:name }}"/>
+    <img src="/visuals/OITT24_LOGO-22x.png" class="hidden lg:block select-none w-24 {{ class }}" width="{{ width }}" alt="{{ config:app:name }}"/>
+    <img src="/visuals/logo_dark.png" class="block lg:hidden select-none w-24 {{ class }}" width="{{ width }}" alt="{{ config:app:name }}"/>
 </a>
 <!-- End: /components/_logo.antlers.html -->
